--- a/AGS.ServerAPI.csproj
+++ b/AGS.ServerAPI.csproj
@@ -244,6 +244,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\clsUsers.cs" />
+    <Compile Include="Models\PortManager.cs" />
     <Compile Include="Models\tmpDataSanitationTemplates.cs" />
     <Compile Include="Model_Managers\clsExperienceAnswersManager.cs" />
     <Compile Include="Model_Managers\clsUsersManager.cs" />
@@ -362,6 +363,7 @@
     <Content Include="Content\bootstrap-reboot.css.map" />
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
+    <Content Include="Connection_Config\ConnectionConfig.json" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
